# AI-Snake-2

./: Cargo.toml  README.md  index.css  index.html  index.js
src/: consts.rs  draw.rs  input.rs  lib.rs  snake.rs  util.rs  view.rs
